--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>ma.emsi</groupId>
@@ -27,57 +27,65 @@
     </dependency>
 
     <dependency>
-     <groupId>com.sparkjava</groupId>
-     <artifactId>spark-core</artifactId>
-     <version>2.9.3</version>
+      <groupId>com.sparkjava</groupId>
+      <artifactId>spark-core</artifactId>
+      <version>2.9.3</version>
     </dependency>
 
     <dependency>
-    <groupId>com.google.code.gson</groupId>
-    <artifactId>gson</artifactId>
-    <version>2.8.8</version>
+      <groupId>com.google.code.gson</groupId>
+      <artifactId>gson</artifactId>
+      <version>2.8.8</version>
     </dependency>
   </dependencies>
 
   <build>
-      <plugins>
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-jar-plugin</artifactId>
-          <configuration>
-            <archive>
-              <manifest>
-                <mainClass>ma.emsi.myapp.RestServer</mainClass>
-              </manifest>
-            </archive>
-          </configuration>
-        </plugin>
+    <finalName>myapp</finalName>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-jar-plugin</artifactId>
+        <configuration>
+          <archive>
+            <manifest>
+              <mainClass>ma.emsi.myapp.RestServer</mainClass>
+            </manifest>
+          </archive>
+        </configuration>
+      </plugin>
 
 
 
-        <plugin>
+      <plugin>
         <artifactId>maven-assembly-plugin</artifactId>
         <version>3.3.0</version>
         <configuration>
           <descriptorRefs>
             <descriptorRef>jar-with-dependencies</descriptorRef>
           </descriptorRefs>
-            <archive>
-              <manifest>
-                <mainClass>ma.emsi.myapp.RestServer</mainClass>
-              </manifest>
-            </archive>
+          <archive>
+            <manifest>
+              <mainClass>ma.emsi.myapp.RestServer</mainClass>
+            </manifest>
+          </archive>
         </configuration>
         <executions>
+         
           <execution>
-            <id>make-assembly</id> <!-- this is used for inheritance merges -->
-            <phase>package</phase> <!-- bind to the packaging phase -->
+            <id>make-assembly</id>            <!-- this is used for inheritance merges -->
+            <phase>package</phase>            <!-- bind to the packaging phase -->
             <goals>
               <goal>single</goal>
             </goals>
+            <configuration>           <!-- copy dependencies / jars to ${project.build.directory}/lib/ -->
+              <outputDirectory>
+                 ${project.build.directory}/lib/
+              </outputDirectory>
+            </configuration>
           </execution>
+            
         </executions>
       </plugin>
-      </plugins>
+    </plugins>
   </build>
 </project>
