--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,8 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>1.8</maven.compiler.target>
+    <!-- Adding SONARQUBE -->
+    <sonar.projectKey>githubactioncicddockersonar</sonar.projectKey>
   </properties>
 
   <dependencies>
