--- a/.github/workflows/sonarqube.yml
+++ b/.github/workflows/sonarqube.yml
@@ -1,4 +1,4 @@
-name: Build
+name: Sonarqube
 on:
   push:
     branches: [ main ]
@@ -37,4 +37,3 @@ jobs:
           SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
           host: ${{ secrets.SONARQUBE_HOST }}
           login: ${{ secrets.MY_SONAR_TOKEN	 }}
-        run: mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar
